--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Marina Alonzo",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.0.14",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "langchain": "^0.1.8"
   }
